# concordium_task_2

./: Cargo.toml  README.md  init-param.json  my-concordium-project.wasm.v1  update-param.json
src/: lib.rs
