# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "my_concordium_project"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "root" ]
description = "my-awesome-project"

[dependencies]
concordium-std = "5.1"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
